--- a/Glava2.tex
+++ b/Glava2.tex
@@ -184,5 +184,5 @@ mergePatchPairs
 файле сетки \textsl{blockMeshDict} обрабатываются textsl{blockMesh} и итоговые сообщения об ошибках показывают 
 пользователю номер строки в которой возникла проблема. На этой стадии не должно быть никаких сообщений об ошибках.
 
-\subsection{Граничные и начальные условия (условия однозначности)}
+\subsection{Граничные и начальные условия}
 \label{sec:2.1.1.2}
