--- a/Vvedenie.tex
+++ b/Vvedenie.tex
@@ -11,3 +11,234 @@ Copyright \textcopyright2011 Фонд OpenFOAM.
  ВЫСОКОГО СПРОСА или ПРИГОДНОСТИ В ПРИКЛАДНЫХ ЦЕЛЯХ.
 
 Набран в LATEX.
+
+
+
+
+
+(Свободная лицензия для Документации)
+
+Версия 1.2, ноябрь 2002 г.
+Copyright ©2000,2001,2002 Free Software Foundation, Inc.
+
+59 Temple Place, Suite 330, Бостон, MA 02111-1307 США
+
+Каждому разрешается копировать и распространять дословные копии этого документа лицензии, но изменение ее (Лицензии)
+ не допускается.
+
+Предисловие
+Назначение этой Лицензии состоит в том, чтобы сделать руководство, учебник, или иной деловой и полезный документ
+ "свободным" под свободой подразумевается: гарантировать каждому эффективную свободу копировать и распространять его,
+ с или без изменений его, либо коммерчески либо некоммерчески. Во-вторых, эта Лицензия сохраняет для автора и издателя
+ способ получить уважение за их работу, не будучи преследуемыми и ответственными за изменения, сделанный другими.
+Эта Лицензия - своего рода “copyleft”, что означает что производные работы над документом должны сами быть свободными
+ в том же самом смысле. Это служит дополнением Общей Публичной Лицензии GNU, которая является лицензией copyleft,
+ разработанной для бесплатного программного обеспечения.
+Мы разработали эту Лицензию, чтобы использовать ее для руководств для бесплатного программного обеспечения, потомучто
+ бесплатное программное обеспечение нуждается в бесплатной документации: бесплатная программа должна идти с руководствами,
+ имеющими те же самые свободы, которые имеет программное обеспечение. Но эта Лицензия не ограничена применением лишь для
+ руководств для программного обеспечения; она может быть использована для любой текстовой работы, независимо от того
+ публикуется ли она в качестве печатного издания. Мы рекомендуем эту Лицензию преимущественно для работ, цель которых -
+ инструкция или литературная ссылка.
+
+1. Применимость и определения
+Эта Лицензия применима к любому руководству или иной работе, выполненной в любой среде, которая содержит упоминание
+ о Лицензии, помещенное держателем авторского права, как указание, что работа может распространятся в соответствии с
+ данной Лицензией. Такое уведомление предоставляет международную, лицензию, без лицензионного платежа, неограниченную
+ по времени, чтобы использовать документ в работе при условиях, установленных здесь. Термин "Документ", используемый
+ здесь и здесь, обозначает любое  руководство или работу.
+Любой автор - лицо, имеющее патент, будем обозначать "Вы". Вы принимаете лицензию, если Вы копируете, изменяете или
+ распространяете работу которая требует получения разрешения согласно закону об авторском праве (copyright).
+“Модифицированная Версия” Документа есть любая работа, содержащая Документ или часть его, либо дословную копию, либо
+ с изменениями и/или переводом на другой язык.
+“Вторичная Секция” есть озаглавленное приложение или секция вступительной части Документа, которая описывает отношение
+ издателей или авторов Документа к полному предмету Документа (или связанным делам) и не содержит ничего, что могло бы
+ попасть непосредственно в предметную область описываемого объекта. (Таким образом, если Документ, например, учебник по
+ математике, то Вторичная Секция не может не содержать никакой математики). Во вторичной секции может описываться
+ историческая связь с предметом или с вопросами, связанными с предметом, или касающихся легального юридического,
+ коммерческого, философского, этического или политического положения.
+“Инвариантные Секции” это Вторичные Секции, содержание которых говорит, что Документ выпущен согласно этой Лицензии.
+ Если секция не делает разъяснение вышеупомянутому определению Вторичных Секций, тогда она не может определяться как
+ Инвариант. Документ может содержать пустые Инвариантные Секции. Если Документ совсем не определяет каких либо Инвариантных
+ Секций тогда в нем их нет.
+“Тексты Обложек (Покрытия)” это определенные короткие элементы текста, которые перечислены, как Текст Лицевой Обложки
+ или Текст Обратной Обложки, причем наличие их указывается там же, где и то, что Документ выпущен согласно этой Лицензии.
+ Текст Лицевой Обложки может содержать не более 5 слов, а Текст Обратной Обложки может содержать не более 25 слов.
+"Прозрачная" копия Документа означает машино - читаемую копию, представленную в формате, спецификация которого общедоступна,
+ является подходящей для просмотра документа непосредственно с помощью использованных при создании документа  редакторами
+ текста или (в случае изображений, составленных из пикселов) аналогичными програмами рисования или некоторыми широко
+ доступными редакторами рисунков, что является подходящим для текстовых процессоров или для автоматического преобразования
+ в различные форматы, удобные для ввода в текстовые процессоры. Копия сделанная в противоположном Прозрачному формате,
+ использование которого, или невозможность использования, с целью помешать, или воспрепятствовать последующей модификации
+ читателями не является Прозрачной копией. Формат изображения не Прозрачен если используется любое существенное количество
+ текста. Копию, которая не "Прозрачна", называют "Непрозрачной".
+Примеры подходящих форматов для Прозрачных копий включают простой ASCII текст без форматирования, формат ввода Texinfo,
+ LaTex, SGML или XML использующие для всех доступные DTD, и удовлетворяющие стандарту простого HTML, PostScript или PDF,
+ в версиях, разработанных для модификации.
+Примеры прозрачных форматов изображения включают PNG, XCF и JPG. Непрозрачные форматы включают использующие право
+ собственности, которые могут быть прочитаны и отредактированы только при наличии лицензии на соответствующие текстовые
+ процессоры, SGML или XML, для которого DTD и/или инструменты обработки не общедоступны, и  автоматизированно
+ сгенерированный HTML, PostScript или PDF, произведенный с помощью текстовых редакторов (текстовыми процессорами)
+ только для чтения (без возможности редактирования человеком).
+"Титульный лист" обозначает, для печатной книги, непосредственно  титульный лист, а также следующие за ним страницы,
+ если они необходимы, чтобы содержать, легально и четко, материал, которого  требует эта Лицензия, и который должен 
+находиться на титульном листе. Для работ в форматах, которые не имеют никакого титульного листа,  "Титульный лист" 
+также текст около самого видного появления названия работы, непосредственно до начала текста
+Секция “Озаглавленный XYZ” обозначает название секции Документа, название которое или - просто XYZ или содержит XYZ 
+в круглых скобках после текста, который переводит XYZ на другой язык. (Здесь XYZ обозначает особое название секции,
+ упомянутое ниже, типа "Благодарностей", "Посвящений", "Одобрений", или "Истории"). Чтобы “Сохранить Название” такой
+ секции, когда Вы изменяете назначение Документа, то она остается секцией “Озаглавленный XYZ” согласно этому определению.
+Документ может включать Гарантийные Правовые обязательства вместе с уведомлением о том, что эта Лицензия применена к
+ Документу. Эти Гарантийные Правовые обязательства, рассматриваются как ссылающиеся на эту Лицензию, но только, что
+ касается отказа от гарантий: любое другое значение, которое эти Гарантийные Правовые обязательства могут иметь,
+ недействительно и не имеет никакого эффекта на значение самой Лицензии.
+
+2. Дословное копирование 
+Вы можете копировать и распространять Документ в любой среде,  коммерчески или некоммерчески, при условии включения
+ этой Лицензии, уведомления об авторском праве и уведомления о лицензии, включая примечания к Лицензии при обращении
+ к Документу, воспроизведенных во всех копиях, и Вам не разрешается добавлять никаких других условий кроме перечисленных
+ в этой Лицензии. Вам не разрешается использовать технические методы, чтобы затруднить или управлять чтением или далее
+ созданием копий, которые Вы делаете или распространяете. Однако, Вы можете просить компенсацию в обмен на копии. Если
+ Вы распространяете достаточно большое число копий, Вы должны также следовать условиям, изложенным в секции 3.
+Вы можете также предоставить копии, при тех же самых вышеизложенных условиях и можете демонстрировать копии.
+
+3. Количество копий
+Если Вы издаете печатные копии (или копии в СМИ, которые обычно имеют печатные обложки) Документа, числом больше 100 штук,
+ и уведомление лицензии Документа требует Текстов Обложек, Вы должны включить в копии Обложки, которые передадут, ясно и
+ четко, все эти Тексты Обложек: Текст Лицевой Обложки на передней обложке, и Текст Задней Обложки на обратной стороне.
+ Обе обложки должны также ясно и четко идентифицировать Вас как издателя этих копий. Лицевая Обложка должна содержать
+ полное название - все слова названия, видных одинаково. Вы можете добавить другой материал на обложки, кроме существующего.
+ Копирование с изменениями, ограничивающихся обложками, пока они сохраняют название Документа и удовлетворяют всем условиям,
+ можно рассматривать как дословное копирование во всех отношениях.
+Если необходимые тексты для любой обложки слишком велики, чтобы поместиться полностью, Вы должны поместить сначала 
+перечисленные (столько, сколько разумно поместится) на фактической обложке, и продолжить размещение остальных на следующих
+ страницах.
+Если Вы издаете или распространяете Непрозрачные копии Документа, количеством более чем 100 штук, Вы должны либо включить
+ машиночитаемую Прозрачную копию наряду с каждой Непрозрачной копией, либо вставить в или с каждой Непрозрачной копией,
+ ссылку на местоположение в компьютерной сети, к которой каждый использующий сеть интернет человек имеет доступ, чтобы
+ скачать, используя протоколы общедоступной стандартной сети,  полную Прозрачную копию Документа, без постороннего материала.
+ Если Вы используете второй вариант, Вы должны принять меры, когда начинаете распространение Непрозрачных копий в количестве,
+ гарантирующем, что эта Прозрачная копия останется таким образом доступной в установленном местоположении по крайней мере
+ один год с момента, когда Вы в последний раз распространяете Непрозрачную копию (непосредственно или через ваших агентов
+ или розничных продавцов) того выпуска.
+Это требует, но не требуется, что бы Вы связывались с авторами Документа задолго до распределения любого большого количества
+ копий, чтобы давать им шанс предоставить Вам обновленную версию Документа.
+
+4. Изменения
+Вы можете копировать и распространять измененную Версию Документа при условиях описанных выше в секциях 2 и 3, при условии,
+ что Вы выпускаете измененную Версию под этой же Лицензией, с измененной Версией выполняющей роль Документа, таким образом
+ лицензируя распределение и модификацию измененной Версии для кого бы то ни было, кто бы не получил копию. Кроме того,
+ Вы должны выполнить следующие пункты в модифицированной Версии:
+A. Использовать в Титульном листе (и на обложках, если имеются) название, отличное от предудыщего Документа, и от предыдущих
+ версий (которые, если были, должны быть перечислены в разделе «истории» Документа). Вы можете использовать то же самое
+ название как в предыдущей версии, если оригинальный издатель прежней версии дает разрешение.
+B. Список авторов на Титульном листе, одного или более или субъектов, ответственных за изменения в модифицированной Версии,
+ вместе с по крайней мере пятью основными авторами Документа (все его основные авторы, если их менее чем пяти), если они не
+ освобождают Вас от этого требования.
+C. Указать на Титульном листе название издателя модифицированной Версии, как издателя (издательство).
+D. Сохранить все уведомления об авторском праве Документа.
+E. Добавить соответствующее уведомление об авторском праве для ваших модификаций смежного с другими уведомлениями об
+ авторском праве.
+F. Включить, немедленно после уведомлений об авторском праве, уведомление о лицензии, дающее публичное разрешение
+ использовать измененную Версию в соответствии с этой Лицензией, в форме, показанной в Приложении ниже.
+G. Сохранить в этой лицензии замечание о полном списке неизменяемых Инвариантных Секций и требуемых Текстов Обложек,
+ перечисленных в уведомлении о лицензии Документа.
+H. Включить неизмененную копию этой Лицензии.
+I. Сохранить секцию, названную "История", чтобы сохранить ее Название, и добавить к этому пункту по крайней мере имеющееся
+ название, год выпуска, новых авторов, и издателя Модифицированной  Версии, как указано в Титульном листе. Если нет
+ никакой секции, названной "История" в Документе, создайте одну, устанавливающую название, год, авторов, и издателя Документа
+ как было на его Титульном листе, затем добавьте пункт, описывающий Модифицированную Версию как установлено в предыдущем
+ предложении.
+J. Сохраните ссылку о местоположении в сети интернет, если таковая вообще имеется, данные для открытого доступа к Прозрачной
+ копии Документа, и аналогично местоположения сети, данные в Документе для предыдущих версий на которых они были основаны.
+ Они могут быть размещены в секцию "Истории". Вы можете опустить местоположение сети для работы, которая была издана по
+ крайней мере за четыре года до Документа непосредственно, или если оригинальный издатель версии, на которого оно ссылается,
+ дает разрешение.
+K. Для любой секции, названной "Благодарности" или "Посвящения", сохраните Название секции, и сохрание в секции все
+ содержание и тон каждого написавшего благодарности и/или посвящения.
+L. Сохраните все Инвариантные Секции Документа, неизменными как по тексту так и по названию. Номер секции или эквивалент
+ не считаются частью названий секции.
+M. Удалите любую секцию названную "Одобрения". Такая секция не может быть включена в Модифицированную Версию.
+N. Не делайте изменение названия для любой существующей секция, которая называется "Одобрения" или имен конфликтующих
+ в названии с любой Инвариантной Секцией.
+O. Сохраняйте все Гарантийные Правовые обязательства (отказ от обязательств).
+
+Если Модифицированная Версия включает новые секции во вступительной части или приложениях, которые готовятся как Вторичные
+ Секции и не содержат никакого материала, скопированного с Документа, Вы можете, по вашему выбору определить некоторых или
+ все эти секции как инвариант. Чтобы сделать это, добавьте их названия в список Инвариантных Секций в уведомлении лицензии
+ Модифицированной Версии. Эти названия должны быть отличными от любых других названий секций.
+Вы можете добавить секцию названную "Одобрения", если она не содержит ничего кроме одобрения вашей Модифицированной Версии
+ различными сторонами, например, утверждения аналогичного обзора  или того, что текст был одобрен организацией - как
+ авторитетное определение стандарта.
+Вы можете добавить часть из не более пяти слов как Текст Лицевой Обложки, и текст не более 25 слов как Текст Задней Обложки,
+ в конец списка Текстов Обложек в Модифицированной Версии.
+Только один фрагмент Текста Лицевой Обложки и один Текст Задней Обложки может быть добавлен либо через операции,
+ выполненные любым юридическим лицом. Если Документ уже включает текст обложки для обложки, предварительно добавленной
+ Вами, или в соответствии с встречей, назначенной тем же самым юридическим лицом от имени которого Вы действуете, Вы не
+ можете добавлять еще одну; то Вы можете заменить старую, получив явное разрешение от предыдущего издателя, который добавил
+ старую обложку.
+Автор(ы) и издатель(и) Документа, в соответствии с этой Лицензией, не дают разрешение использовать их имена для опубликования
+ или для утверждения или требования одобрения для любой Модифицированной Версии.
+
+5. Объединение документов
+Вы можете объединить Документ с другими документами, выпущенными согласно этой Лицензии, согласно терминам определенным
+  в секции 4 выше для модифицированных версий, при условии, что Вы включаете в комбинацию все Инвариантные Секции всех
+ оригиналов документа, неизмененными, и перечисляете их всех как Инвариантные Секции вашей объединенной работе в ее
+ уведомлении лицензии, и что Вы сохраняете все их Гарантийные Правовые оговорки.
+Объединенная работа должна только содержать одну копию этой Лицензии, и многократные идентичные Инвариантные Секции могут
+ быть заменены единственной копией. Если есть многократные Инвариантные Секции с тем же самым названием, но отличающимся
+ содержанием, сделайте уникальным название каждой такой секции, добавляя в конце ее, в круглых скобках, название
+ оригинального автора или издателя той секции если оно известно, или иначе уникального номера версии. Сделайте то же
+ самое регулирование названий секции в списке Инвариантные Секции в уведомлении лицензии о объединенной работе. 
+В комбинации документов, Вы должны объединить любые секции Называющиеся "История" в различных оригиналах документа,
+ формируя одну секцию Называющуюся "История"; аналогично объедините любые секции Называющиеся "Благодарности", и любые
+ секции Называющиеся "Посвящения". Вы должны удалить все секции Названные "Одобрения". (Прим. Перев. - являющиеся прямо
+ или косвенно саморекламой предыдущих авторов).
+
+6. Коллекция документов
+Вы можете сделать собрание, коллекцию, состоящую из Документа и других документов выпущенных согласно этой Лицензии, и
+ заменить индивидуальные копии этой Лицензии в различных документах с единственной копией, которая включена в собрание,
+ при условии, что Вы следуете за правилами этой Лицензии для дословного копирования каждого из документов во всех других
+ отношениях.
+Вы можете извлечь единственный документ из такого собрания, и передавать его индивидуально согласно этой Лицензии, если
+ Вы вставляете копию этой Лицензии в извлеченный документ, и следуете за этой Лицензией во всех других отношениях
+ относительно дословного копирования того документа.
+
+7. Совокупность независимых работ
+Компиляцию Документа или его производных с другими отдельными и независимыми документами или работами, в или на объеме
+ среды хранения или распределения, называют "совокупностью", если авторское право, следующее из компиляции не используется,
+ чтобы ограничить юридические права пользователей компиляции вне того, чтобы разрешить человеку работать. Когда Документ
+ включен в совокупность, эта Лицензия не обращается к другим работам в совокупности, которые не являются непосредственно
+ производными работы Документа.
+Если требование Текста Обложки секции 3 применимо к этим копиям Документа, то, если Документ - меньше чем одна половина
+ всей совокупности, Тексты Обложки Документа могут быть помещены в обложки, которые заключают в скобки Документ в пределах
+ совокупности, или электронного эквивалента обложек, если Документ находится в электронной форме. Иначе они должны
+ появиться на печатных обложках, которые заключают в скобки целую совокупность документов.
+
+8. Перевод 
+Перевод считают своего рода модификацией, таким образом Вы можете передавать переводы данного документа в соответствии
+ с секцией 4. Замена Инвариантных Секций с переводами требует специального разрешения от их держателей авторского права,
+ но Вы можете включить переводы некоторых или всех Инвариантных Секций в дополнение к оригинальным версиям этих
+ Инвариантных Секций. Вы может включить перевод этой Лицензии, и всех уведомлений лицензии в Документе, и любых
+ Гарантийных Правовых обязательствах, при условии, что Вы также включаете оригинальную английскую версию этой Лицензии
+ и оригинальные версии тех уведомлений и правовых оговорок. В случае разногласия между переводом и оригинальной версией
+ этой Лицензии или уведомления или правовых обязательств от оригинала, версия оригинала будет преобладать.
+Если секция в Документе называется "Благодарности", "Посвящения", или "История", требование (секция 4), чтобы Сохранить
+ ее Название (секция 1) будет типично требовать изменения фактического названия.
+
+9. Прекращение лицензии
+Вы не можете копировать, изменять, сублицензировать, или распространять Документ кроме способов явно обеспеченных
+ согласно этой Лицензии. Любая другая попытка скопировать, чтобы изменить, чтобы сублицензировать или распределять
+ Документ является (юридически пустой) недействительной, и автоматически закончит ваши права согласно этой Лицензии.
+ Однако, стороны, которые получили копии, или права, от Вас согласно этой Лицензии не будут заканчивать их лицензии,
+ пока такие стороны остаются в полном согласии.
+
+10. Будущие ревизии этой лицензии (GNU)
+Свободный Фонд Программного обеспечения может издать новые, пересмотренные версии лицензии GNU Свободной Лицензии
+ Документации время от времени. Такие новые версии будут подобны по духу существующей версии, но могут отличаться
+ в деталях, чтобы удовлетворять новым проблемам или беспокоящим моментам. См. http://www.gnu.org/copyleft/.
+Каждой версии Лицензии дают различающий номер версии. Если Документ определяет, что специфическая пронумерованная
+ версия этой Лицензии “или любой более поздней версии” обращается к нему, Вы имеете выбор следовать за терминами и
+ условиями или этой данной версии или любой более поздней версии, которая была издана (не как предварительный проект)
+ Свободным Фондом Программного обеспечения. Если Документ не определяет номер версии этой Лицензии, Вы можете выбрать 
+любую версию когда-либо издаваемую (не как предварительный проект) Свободным Фондом Программного обеспечения.
