--- a/UserGuideRu/Glava2.tex
+++ b/UserGuideRu/Glava2.tex
@@ -1,4 +1,5 @@
 \chapter{Учебные примеры}
+\label{chap:2}
 В этой главе мы опишем подробно процесс установки, моделирования и пост- процесорной обработки для некоторых тестовых
  примеров OpenFOAM, с основной целью: познакомить пользователя с основными процедурами работы и управления OpenFOAM.
  \textit{\$FOAM\_TUTORIALS} директория содержит много тестовых случаев, которые демонстрируют использование всех
@@ -10,7 +11,7 @@
  Те пользователи, которые имеют доступ к постпроцессорам, разработанным другими фирмами (из инструментария посторонних
  разработчиков), также поддерживаемых в OpenFOAM, имеют выбор: либо они могут следовать за примерами обучающих программ,
  используя \textsl{paraFoam}; либо обратиться к описанию использования продукта постороннего разработчика, как описано в
-главе 6, когда требуется постпроцессорная обработка.
+\autoref{chap:6}, когда требуется постпроцессорная обработка.
 
 Копии всех обучающих программ доступны в директории \textit{tutorials} из поставки OpenFOAM.
 Обучающие программы организованы
@@ -70,7 +71,7 @@ OpenFOAM всегда работает в 3 мерной декартовой с
  в 2 измерениях, определяя специальное \textsl{empty} (пустое) граничное условие на границах, нормальных к (3-ему)
  z измерению (для данного примера), для которого никакое решение проводить не требуется.
 Область примера \textsl{cavity} состоит из квадрата c длинами сторон \textit{d} = 0.1 м. в \textit{x-y} плоскости.
-Первоначально будет использоваться равномерная сетка 20 на 20 ячеек. В блочной конструкции показанной на Рис. 2.2. генератор сеток,
+Первоначально будет использоваться равномерная сетка 20 на 20 ячеек. В блочной конструкции показанной на \autoref{fig:2.2}. генератор сеток,
  поставляемый с OpenFOAM, \textit{blockMesh}, создает сетки, используя команды из описания определенного в словаре ввода,
  \textit{blockMeshDict} расположенного в каталоге \textit{constant/polyMesh} данного примера. Чтобы перейти к
  \textit{blockMeshDict}  для этого примера  возьмем следующий файл:
@@ -87,7 +88,7 @@ FoamFile
     version     2.0;
 \end{verbatim} 
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
  \includegraphics[width=229pt,height=241pt]{UGFigure2-2.PNG}
  % UGFigure2-2.PNG: 306x321 pixel, 96dpi, 8.10x8.49 cm, bb=0 0 229 241
@@ -165,7 +166,7 @@ mergePatchPairs
 \end{verbatim}
 
 В начале файла содержится заголовок в форме баннера (строки 1-7), далее информация файла
- содержится в подсловаре \textsl{FoamFile}, заключенная в фигурных скобках ({...}).
+ содержится в подсловаре \textsl{FoamFile}, заключенная в фигурных скобках (\verb|{|\ldots\verb|}|).
 
 \textit{В остальной части руководства:}
 Ради сохранения места и для ясности, шапка или заголовок файла, включая баннер и \textsl{FoamFile} подсловарь,
@@ -174,7 +175,7 @@ mergePatchPairs
 Файл в начале содержит блок вершин \texttt{vertices} (x,y,z координаты точек); затем в нем определяются сами блоки
  (\texttt{blocks})  (в данном примере имеется только 1) с помощью описанных выше меток вершин и номеров
  ячеек внутри них; и наконец, в файле определяются поверхности для задания граничных патчей.
- Пользователю предлагается обратиться к секции 5.3 чтобы понять значение вводимых  величин в \textsl{blockMeshDict} файле.
+ Пользователю предлагается обратиться к \autoref{sec:5.3} чтобы понять значение вводимых  величин в \textsl{blockMeshDict} файле.
 
 Сетка генерируется при запуске утилиты \textsl{blockMesh}, использующей файл \textsl{blockMeshDict}.
 Запуск производится из директории задачи, просто набором команды в терминале:
@@ -186,7 +187,7 @@ mergePatchPairs
 пользователю номер строки в которой возникла проблема. На этой стадии не должно быть никаких сообщений об ошибках.
 
 \subsection{Граничные и начальные условия}
-\label{sec:2.1.1.2}
+\label{sssec:2.1.1.2}
 
 Как только генерация сетки окончена, пользователь может посмотреть на заданные начальные поля установленные для этого
  расчетного случая. Пример установлен на начальное время t = 0 сек, так что данные о начальных полях
@@ -223,18 +224,18 @@ boundaryField
 Сущестуют 3 главных раздела ввода полей данных файлов:
 
 \texttt{dimensions} (размерности) определяют величину размерности поля, здесь \textit{кинематическое}
- давление, $m^2 s^{−2}$ (баротропия или отношение давления к плотности => (н/$м^2$) /(кг/$м^3$)=$м^2$/$c^2$)
- (смотрите секцию 4.2.6 для более детальной информацией);
+ давление, $m^2 s^{−2}$ (баротропия или отношение давления к плотности => (N/$m^2$) /(кг/$m^3$)=$m^2$/$s^2$)
+ (смотрите \autoref{ssec:4.2.6} для более детальной информацией);
 
 \texttt{internalField} данные поля внутри расчетной области, которое может быть задано однородным (\texttt{uniform}),
  описываемым одной цифровой величиной; или неоднородным (\texttt{nonuniform}), где все значения поля должны быть заданы
- (смотрите секцию 4.2.8 для более подробной информацией);
+ (смотрите \autoref{ssec:4.2.8} для более подробной информацией);
 
 \texttt{boundaryField} данные о граничных полях, которые включают граничные условия, и данные обо всех граничных
- патчах (boundary patches) (смотрите секцию 4.2.8 для более подробной информации).
+ патчах (boundary patches) (смотрите \autoref{ssec:4.2.8} для более подробной информации).
 
 Для данного примера каверны (\textsl{cavity}), границы состоят только из стенок, разбитые на 2 патча
- названных: (1) \textsl{fixedWalls} для неподвижных фиксированных боковых стенок и основания каверны; (2) \textsl{movingWall}
+ названных: (1) \textsl{fixedWall} для неподвижных фиксированных боковых стенок и основания каверны; (2) \textsl{movingWall}
 для подвижного верха каверны. На стенках, и тех и других, граничное условие для давления \textsl{p} есть \textsl{zeroGradient},
  что означает “нормальный градиент давления равен нулю”. Патчи \textsl{frontAndBack} представляют переднюю и заднюю
  плоскости и поэтому для двумерного случая должны быть заданы \textsl{empty} (пустой).
@@ -247,49 +248,54 @@ boundaryField
 Пользователь может аналогично проверить поле скорости в файле \textsl{0/U}. Размерности \textsl{dimensions}
  необходимы для скорости, внутреннее поле инициализируется как одногродное нулевое \textsl{uniform zero},
  что в случае скорости должно быть представлено тремя компонентами, т.е. \textsl{uniform (0 0 0)} (смотри
- секцию 4.2.5 для более подробной информации).
+ \autoref{ssec:4.2.5} для более подробной информации).
 
 Граничные условия для скорости требуют аналогичных граничных условий (empty) для переднего
  и заднего патчей \textsl{frontAndBack}. Другими патчи являются стенками (walls): условие
- непроскальзывания (no-slip condition) задаётся на поверхностях \textsl{fixedWalls}, следовательно
- условие \textsl{ﬁxedValue} со значением \texttt{uniform (0 0 0)}. Верхняя поверхность движется
+ непроскальзывания (no-slip) задаётся на поверхностях \textsl{fixedWalls}, следовательно
+ условие \textsl{$ﬁxedValue$} со значением \texttt{uniform (0 0 0)}. Верхняя поверхность движется
  со скоростью 1 м/с в направлении оси \textit{x}, что тоже требует условия \textsl{ﬁxedValue}, но со значением 
 \texttt{uniform (1 0 0)}.
 
 \subsection{Физические свойства}
-\label{sec:2.1.1.3}
+\label{sssec:2.1.1.3}
 
 Физические свойства для кейса хранятся в словарях (dictionaries), к чьим именам добавляются суффиксы 
-\dots \textit{Properties} (Свойства), расположены в дереве каталогов \textit{Dictionaries}.
+\textsl{...Properties} (Свойства), расположены в дереве каталогов \textit{Dictionaries}.
  Для кейса \textsl{icoFoam}, должно быть задано единственное свойство это кинематическая вязкость, которая хранится
  в словаре \textit{transportProperties}. Пользователь может проверить, что кинематическая вязкость
  задана правильно открыв словарь \textit{transportProperties} а также просмотреть/отредактировать его содержимое.
  Ключевое слово для кинематической вязкости \textsl{nu}, фонетическое обозначение
  греческой буквы $\nu$ которой вязкость обозначена в уравнениях. Первоначально этот кейс будет запущен с числом Рейнольдса
-равным 10, где число Рейнольдса определяется как:
+равным $10$, где число Рейнольдса определяется как:
 \begin{equation}
  Re = \frac{d|\bf U|}{\nu}
+ \label{eq:2.1}
 \end{equation}
 
-где $d$ и $|\bf U|$ характеристики размер и модуль скорости соответственно, а $\nu$ кинематическая вязкость.
- В примере $d = 0.1 м$, $|\bf U| = 1 мс^{−1}$, так что для $Re = 10$, $\nu = 0.01 m^2s^{−1}$.
+где $d$ и $\bf{U}$ характеристики размер и модуль скорости соответственно, а $\nu$ кинематическая вязкость.
+ В примере $d = 0.1 m$, $|\bf U| = 1 ms^{−1}$, так что для $Re = 10$, $\nu = 0.01{m^{2}s^{-1}}$.
 
 Верными входными величинами для кинематической вязкости являются представленные ниже значения:
 
-\begin{verbatim}
- nu        nu [ 0 2 -1 0 0 0 0 ] 0.01;
+\begin{verbatim}[file, linenum=17]
+
+nu              [0 2 -1 0 0 0 0] 0.01;
+
+
+// ************************************************************************* //
 \end{verbatim} 
 
 \subsection{Управление}
-\label{sec:2.1.1.4}
+\label{sssec:2.1.1.4}
 
 Входные данные, относящиеся к управлению временем чтения и записи данных решения находятся в \textit{controlDict}. 
 Пользователь должен просмотреть данный файл, так как это основной файл управления, находится в папке \textit{system}.
 
 Для запуска необходимо задать время начала и конца решения, а также шаг по времени. OpenFOAM предоставляет 
-широкие возможности по управлению временем. Подробное описание вы найдете в разделе 4.3. В этом руководстве
+широкие возможности по управлению временем. Подробное описание вы найдете в \autoref{sec:4.3}. В этом руководстве
  мы хотим начать запуск в момент времени  $t = 0$, это значит что OpenFOAM необходимо считать данные из каталога
- $0$ (см. раздел 4.1). Поэтому мы задаем значения для \texttt{startFrom} и \texttt{startTime}, а затем назначаем
+ $0$ (см. \autoref{sec:4.1}). Поэтому мы задаем значения для \texttt{startFrom} и \texttt{startTime}, а затем назначаем
  \texttt{startTime} значение $0$.
 
 Для конечного шага по времени мы хотим получить стационарное решение для потока, циркулирующего внутри полости каверны.
@@ -314,12 +320,12 @@ boundaryField
  поэтому максимальное значение $C_o<1$ будет вблизи двигающейся крышки, где скорость около 1 м/с.
  Соответственно размер ячейки определяется по формуле:
 \begin{equation}
- \delta x = \frac{d}{n} = \frac{0.1}{20} = 0.005 м
+ \delta x = \frac{d}{n} = \frac{0.1}{20} = 0.005 m
 \end{equation}
 Следовательно чтобы получить число Куранта меньше или равное 1 во всей области, шаг по времени \texttt{deltaT}
  должен быть меньше или равен:
 \begin{equation}
- \delta x = \frac{C_o \delta x}{|\bf U|} = \frac{1 \times 0.005}{1} = 0.005 с
+ \delta x = \frac{C_o \delta x}{|\bf U|} = \frac{1 \times 0.005}{1} = 0.005 s
 \end{equation}
 В процессе моделирования мы решили записывать результаты через определенные промежутки времени,
  что мы можем позднее просмотреть с помощью постпроцессора. Оператор \texttt{writeControl} предоставяет несколько
@@ -415,3 +421,43 @@ runTimeModifiable true;
 
 \section{Запуск приложения}
 \label{sec:2.1.3}
+
+Как и любые исполняемые Unix/Linux приложения, OpenFOAM можно запустить двумя способами: как главный процесс, т.е. в котором оболочка ждет завершения выполнения команды, прежде чем запустить командную строку; и как фоновый процесс, который в течение процесса выполнения позволяет вызвавшей оболочке получать дополнительные команды. 
+В данном случае мы будем запускать icoFoam в качестве главного процесса. Солвер icoFoam выполняется либо путем ввода в каталоге, набрав
+
+\begin{verbatim}
+icoFoam 
+\end{verbatim}
+
+в командной строке, либо с помощью -case с выборочным параметром,зависящим от каталога, например:
+
+\begin{verbatim}
+icoFoam -case $FOAM RUN/tutorials/incompressible/icoFoam/cavity
+\end{verbatim}
+
+Ход решения записывается в окне терминала. Он сообщает пользователю текущее время, максимальное значение числа Куранта, начальные и конечные невязки решения по всем направлениям течения.
+
+\section{Последующая обработка (Post-processing)}
+\label{sec:2.1.4}
+
+В то время как результаты записываются во временные каталоги, их можно просмотреть с помощью paraFoam. Вернитесь к окну paraFoam и выберите панель Properties для cavity.OpenFOAM модуля. Если нужное окно панелей в случае модуля, не отображается в любой момент времени, пожалуйста, убедитесь, что: cavity.OpenFOAM подсвечивается синим цветом, а кнопка (глаза) eye рядом с ним нажата и показывает, что графика включена;
+Чтобы подготовить paraFoam для отображения данных, представляющих интерес, мы должны сначала загрузить данные в соответствующий момент времени 0,5 сек. Если процесс был запущен в то время как ParaView был открыт, выходные данные во временных директориях не будут автоматически загружаться в среду ParaView. Для загрузки данных пользователь должен выбрать Update GUI в окне Properties, а затем нажать зеленую кнопку Apply. Временные данные будут загружены в ParaView.
+
+\begin{figure}[ht]
+%  \centering
+%  \includegraphics[width=229pt,height=241pt]{UGFigure2-2.PNG}
+%  % UGFigure2-2.PNG: 306x321 pixel, 96dpi, 8.10x8.49 cm, bb=0 0 229 241
+%  \caption{Показаны характеристики давления для каверны.}
+%  \label{fig:2.2}
+\end{figure}
+
+\begin{figure}[ht]
+%  \centering
+%  \includegraphics[width=229pt,height=241pt]{UGFigure2-2.PNG}
+%  % UGFigure2-2.PNG: 306x321 pixel, 96dpi, 8.10x8.49 cm, bb=0 0 229 241
+%  \caption{Распределение давлений для модели каверны.}
+%  \label{fig:2.2}
+\end{figure}
+
+\section{Поверхности постоянных значений и профильные диаграммы (Isosurface and contour plots)}
+\label{sec:2.1.4.1}
