--- a/UserGuideRu/OF-UG-2-1-0-Ru.tex
+++ b/UserGuideRu/OF-UG-2-1-0-Ru.tex
@@ -1,7 +1,22 @@
 \documentclass[a4paper,14pt]{book}
+\usepackage[T1]{fontenc}
 \usepackage[utf8x]{inputenc}
 \usepackage[english,russian]{babel}
-\usepackage{graphicx} 
+\usepackage{graphicx}
+
+
+% \usepackage{microtype}
+% \DisableLigatures{encoding=*,family=*}
+% \usepackage{newunicodechar}
+% \newunicodechar{ff}{ff}
+% \newunicodechar{fi}{fi}
+% \newunicodechar{fl}{fl}
+% \newunicodechar{ffi}{ffi}
+% \newunicodechar{ffl}{ffl}
+\usepackage{hyperref}
+\usepackage{imakeidx}
+
+
 
 \usepackage{geometry} % Меняем поля страницы
 \geometry{left=2cm}% левое поле
