--- a/UserGuideRu/Vvedenie.tex
+++ b/UserGuideRu/Vvedenie.tex
@@ -1,6 +1,7 @@
 \addcontentsline{toc}{chapter}{Права}
 
-Copyright \textcopyright2011 Фонд OpenFOAM.
+Copyright \copyright{} 2011--2015 \href{http://openfoam.org}{OpenFOAM Foundation Ltd.}\par
+Author: Christopher J. Greenshields, \href{http://cfd.direct}{CFD Direct Ltd.}
 
 Разрешение предоставлено копировать, распространять и/или изменять этот документ согласно пунктам из GNU
  Свободной Лицензии Документации, Версия 1.2, изданная Фондом Свободного Программного обеспечения; без Неизменяемых Секций,
@@ -10,4 +11,5 @@ Copyright \textcopyright2011 Фонд OpenFOAM.
 Этот документ распространен в надежде, что будет полезен, но БЕЗ КАКОЙ-ЛИБО ГАРАНТИИ; без даже подразумеваемой гарантии
  ВЫСОКОГО СПРОСА или ПРИГОДНОСТИ В ПРИКЛАДНЫХ ЦЕЛЯХ.
 
-Набран в LATEX.
+\noindent
+Набран в \LaTeX.
